--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
       "cors": "^2.8.5",
       "express": "^4.15.4",
       "lodash": "^4.17.21",
+      "nodemon": "^2.0.19",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^4.2.0",
       "ts-node": "^9.0.0",
@@ -17,6 +18,7 @@
       "typescript": "~4.0.5"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "watch" : "nodemon src/index.ts"
    }
 }
